<resources>
    <string name="no_connection">No Connection</string>
    <string name="time_out">Time Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quiz_list">Quiz List</string>
    <string name="question">Question</string>
    <string name="next_question">Next Question</string>
    <string name="current_history_question">Current History Question</string>
    <string name="exam_results">Exam Results</string>
    <string name="wrong">Wrong</string>
    <string name="correct">Correct</string>
    <string name="retest">Retest</string>
    <string name="question_number">Question Number</string>
    <string name="not_multimedia">The exam is not multimedia</string>
    <string name="is_empty_list">Quiz list is empty</string>
    <string name="not_cloze">The exam is not cloze</string>
    <string name="cloze_results">Cloze Result</string>
    <string name="proceed">Proceed</string>
    <string name="submit">Submit</string>
    <string name="title_retry">Try Again!</string>
    <string name="sd_720">SD 270P</string>
    <string name="buffer">Buffer...</string>
    <string name="play">Play</string>
    <string name="share_it">Share Tt</string>
    <string name="playback_error_please_try_again">Playback error, please try again</string>
    <string name="retry">Retry</string>
    <string name="file_not_found">File not found</string>
    <string name="descriptive_answer">پاسخ تشریحی</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="description">Media Controls</string>
</resources>