<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_x2">

    <LinearLayout
        android:id="@id/lnParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_middle" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="@dimen/margin_200"
            android:layout_height="@dimen/margin_150"
            app:srcCompat="@drawable/ic_logo" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="@dimen/line_spacing_extra_14"
            android:text="@string/cloze_results"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_medium" />

        <TextView
            android:id="@id/txtSuccessQuestionResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/text_size_14" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/margin_32" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@id/txtUnSuccessAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_text_un_success_red_progress"
                    android:textSize="@dimen/text_size_14" />
                <View
                    android:layout_width="@dimen/margin_1"
                    android:layout_height="@dimen/margin_8"/>
                <ProgressBar
                    android:id="@id/progressUnSuccess"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_40"
                    android:layout_marginBottom="@dimen/margin_1"
                    android:progressDrawable="@drawable/green_un_success_progress_drawable"
                    android:rotation="270" />

                <View
                    android:layout_width="@dimen/margin_1"
                    android:layout_height="@dimen/margin_8"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wrong"
                    android:textColor="@color/color_text_un_success_red_progress"
                    android:textSize="@dimen/text_size_14" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/margin_16"
                android:layout_height="@dimen/margin_1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtSuccessAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_text_success_green_progress"
                    android:textSize="@dimen/text_size_14" />
                <View
                    android:layout_width="@dimen/margin_1"
                    android:layout_height="@dimen/margin_8"/>
                <ProgressBar
                    android:id="@id/progressSuccess"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_40"
                    android:layout_marginBottom="@dimen/margin_1"
                    android:progressDrawable="@drawable/green_success_progress_drawable"
                    android:rotation="270" />
                <View
                    android:layout_width="@dimen/margin_1"
                    android:layout_height="@dimen/margin_8"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/correct"
                    android:textColor="@color/color_text_success_green_progress"
                    android:textSize="@dimen/text_size_14" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/margin_16"
            android:paddingTop="@dimen/margin_8"
            android:paddingEnd="@dimen/margin_16"
            android:paddingBottom="@dimen/margin_8">

            <com.google.android.material.button.MaterialButton
                android:id="@id/btnRetest"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/retest"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@color/color_blue_button"
                app:cornerRadius="@dimen/margin_16"
                app:rippleColor="@color/accent" />

        </LinearLayout>


    </LinearLayout>

    <ProgressBar
        android:id="@id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
