<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_x2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/margin_16"
        android:paddingTop="@dimen/margin_8"
        android:paddingEnd="@dimen/margin_16"
        android:paddingBottom="@dimen/margin_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_white_shape"
                android:orientation="vertical">

                <TextView
                    android:id="@id/txtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/margin_16"
                    android:paddingTop="@dimen/margin_16"
                    android:paddingEnd="@dimen/margin_16"
                    android:paddingBottom="@dimen/margin_120"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16"
                    android:textStyle="bold"
                    tools:text="@string/hello_blank_fragment" />

                <ProgressBar
                    android:id="@id/progressPeriodTime"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_6"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:layout_marginBottom="@dimen/margin_1"
                    android:progressDrawable="@drawable/green_progress_drawable" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_16" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@id/rcQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_16" />

            <TextView
                android:id="@+id/txtDescriptionAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_4"
                android:background="@drawable/rounded_blue_shape"
                android:gravity="start|top"
                android:paddingStart="@dimen/margin_8"
                android:paddingTop="@dimen/margin_8"
                android:paddingEnd="@dimen/margin_8"
                android:paddingBottom="@dimen/margin_120"

                android:textColor="@color/black"
                android:textSize="@dimen/margin_16"
                android:textStyle="bold"
                android:visibility="gone" />

            <com.google.android.material.card.MaterialCardView
                android:id="@id/cvVideo"
                android:visibility="gone"
                android:layout_width="@dimen/margin_250"
                android:layout_height="@dimen/margin_150"
                android:layout_gravity="center_horizontal"
                app:cardCornerRadius="@dimen/margin_8">

                <VideoView
                    android:id="@id/viewVideo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@id/imgPlay"
                    android:layout_width="@dimen/margin_48"
                    android:layout_height="@dimen/margin_48"
                    android:layout_gravity="center"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_play_circle"
                    app:tint="@color/primary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:visibility="gone"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_8"
                        android:layout_marginLeft="@dimen/margin_8"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_12"
                        tools:text="00:01" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/margin_1"
                        android:layout_weight="1" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@id/imgFullScreen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:background="?android:attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="@dimen/margin_8"
                        app:srcCompat="@drawable/ic_fullscreen"
                        app:tint="@color/primary" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <LinearLayout
                android:id="@id/lnAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_32"
                android:orientation="vertical"
                android:visibility="gone">

                <com.google.android.material.button.MaterialButton
                    android:id="@id/btnNextQuestion"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_55"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/margin_4"
                    android:paddingLeft="@dimen/margin_53"
                    android:paddingRight="@dimen/margin_53"
                    android:text="@string/next_question"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/color_blue_button"
                    app:cornerRadius="@dimen/margin_32"
                    app:rippleColor="@color/accent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_5" />

                <com.google.android.material.button.MaterialButton
                    android:id="@id/btnCurrentHistoryQuestion"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_55"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/margin_4"
                    android:paddingLeft="@dimen/margin_40"
                    android:paddingRight="@dimen/margin_40"
                    android:text="@string/current_history_question"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/color_blue_button"
                    app:cornerRadius="@dimen/margin_32"
                    app:rippleColor="@color/accent" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
